--- a/hello-angular/src/app/add-new-user/add-new-user.component.html
+++ b/hello-angular/src/app/add-new-user/add-new-user.component.html
@@ -1,5 +1,5 @@
 <p>add-new-user works!</p>
 <div>
   fullName:{{fullName}}
-  <button (click)="deleteUser(fullName)">DELETE</button>
+  <button (click)="addUser(fullName)">ADD</button>
 </div>
