--- a/angular-fundamentals/src/app/catalogue/catalogue.component.html
+++ b/angular-fundamentals/src/app/catalogue/catalogue.component.html
@@ -19,9 +19,9 @@
           </div>
         </div>
         <div class="price">
-          <div *ngIf="product.discount ===0">{{ product.price.toFixed(2) }}</div>
+          <div *ngIf="product.discount ===0">{{ product.price | currency:'GBP'  }}</div>
           <div *ngIf="product.discount != 0" class="discount">
-            Discounted - ${{ (product.price * (1 - product.discount)).toFixed(2) }}
+            Discounted - {{ (product.price * (1 - product.discount)) | currency:'GBP' }}
           </div>
           <button class="cta">Buy</button>
         </div>
