pass data to product-details component

--- a/angular-fundamentals/src/app/catalogue/catalogue.component.html
+++ b/angular-fundamentals/src/app/catalogue/catalogue.component.html
@@ -9,30 +9,7 @@
 
   <ul class="products">
     <li class="product-item" *ngFor="let product of getFilteredProducts()">
-      <div class="product">
-        <div class="product-details">
-          <img [src]="getRobotPartImageUrl(product)" [alt]="product.name" />
-          <div class="product-info">
-            <div class="name">{{ product.name }}</div>
-            <div class="description">{{ product.description }}</div>
-            <div class="category">Part Type: {{ product.category }}</div>
-          </div>
-        </div>
-        <div class="price">
-          <div
-            [style.color]="product.discount != 0 ? 'green':''"
-            class="bold"
-            [ngClass]="getCssClasses(product)"
-          >{{ product.price | currency:'GBP' }}</div>
-<!--          <div [ngClass]="{ strikethrough: product.discount != 0}">{{ product.price | currency:'GBP' }}</div>-->
-<!--          <div [class.strikethrough]="product.discount != 0">{{ product.price | currency:'GBP' }}</div>-->
-<!--          <div *ngIf="product.discount ===0">{{ product.price.toFixed(2) }}</div>-->
-          <div *ngIf="product.discount != 0" class="discount">
-            {{ (product.price * (1 - product.discount)) | currency:'GBP' }}
-          </div>
-          <button class="cta">Buy</button>
-        </div>
-      </div>
+      <app-product-details [product]="product"/>
     </li>
   </ul>
 </div>
