--- a/angular-fundamentals/src/app/catalogue/catalogue.component.html
+++ b/angular-fundamentals/src/app/catalogue/catalogue.component.html
@@ -9,7 +9,7 @@
 
   <ul class="products">
     <li class="product-item" *ngFor="let product of getFilteredProducts()">
-      <app-product-details [product]="product"/>
+      <app-product-details [product]="product" (buy)="addToCart(product)"/>
     </li>
   </ul>
 </div>
