--- a/angular-fundamentals/src/app/catalog/catalogue.component.html
+++ b/angular-fundamentals/src/app/catalog/catalogue.component.html
@@ -1,10 +1,10 @@
 <div class="container">
   <div class="filters">
-    <a class="button" (click)="productCategoryFilter='Heads'">Heads</a>
-    <a class="button" (click)="productCategoryFilter='Arms'">Arms</a>
-    <a class="button" (click)="productCategoryFilter='Torsos'">Torsos</a>
-    <a class="button" (click)="productCategoryFilter='Bases'">Bases</a>
-    <a class="button" (click)="productCategoryFilter=''">All</a>
+    <a class="button" routerLink="/catalog/Heads">Heads</a>
+    <a class="button" routerLink="/catalog/Arms">Arms</a>
+    <a class="button" routerLink="/catalog/Torsos">Torsos</a>
+    <a class="button" routerLink="/catalog/Bases">Bases</a>
+    <a class="button" [routerLink]="['/catalog', '']">All</a>
   </div>
 
   <ul class="products">
