--- a/angular-fundamentals/src/app/user/sign-in/sign-in.component.html
+++ b/angular-fundamentals/src/app/user/sign-in/sign-in.component.html
@@ -1,5 +1,5 @@
 <div class="container">
-  <form class="form">
+  <form class="form" (ngSubmit)="signIn()">
     <img class="logo" src="/assets/images/logo.png" />
     <div class="sign-in">Sign In</div>
     <div class="sub-text">to acquire awesome bots</div>
@@ -7,11 +7,13 @@
       name="email"
       placeholder="Email Address"
       type="text"
+      [(ngModel)]="credentials.email"
     />
     <input
       name="password"
       placeholder="Password"
       type="password"
+      [(ngModel)]="credentials.password"
     />
     <div class="buttons">
       <button type="submit"class="button cta">
